--- a/login/dashboard/crud/app.css
+++ b/login/dashboard/crud/app.css
@@ -13,8 +13,8 @@ main {
 }
 
 h1 {
-    font-size: 2em;
-    margin: .67em 0
+    /*font-size: 2em;*/
+    margin: .67em 0;
 }
 
 hr {
@@ -25,7 +25,7 @@ hr {
 
 pre {
     font-family: monospace, monospace;
-    font-size: 1em
+    font-size: 1em;
 }
 
 a {
@@ -297,6 +297,7 @@ h4 {
 }
 
 .boton-verde {
+    background: #7e7e7e;
     color: #fff;
     font-weight: 900;
     text-decoration: none;
