--- a/categorias/tarjetas.css
+++ b/categorias/tarjetas.css
@@ -131,7 +131,9 @@ a:hover {
   color: white;
 }
 
-
+.box1 .background-hover {
+  background: linear-gradient(to bottom, #3dc315, #fdb42a);
+}
 
 .box .background-hover{
   width: 100px;
